0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_raman_from_labspec.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_raman_from_labspec.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_raman_from_labspec.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_raman_from_labspec.py:


Loading RAMAN experimental file
============================================

Here we load experimental LABSPEC spectra and plot them.

.. GENERATED FROM PYTHON SOURCE LINES 16-18

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 19-20

define the folder where are the spectra

.. GENERATED FROM PYTHON SOURCE LINES 20-23

.. code-block:: default

    datadir = scp.preferences.datadir
    ramandir = datadir / "ramandata/labspec"








.. GENERATED FROM PYTHON SOURCE LINES 24-38

.. code-block:: default


    A = scp.read_labspec("Activation.txt", directory=ramandir)
    A.plot()

    A = scp.read_labspec("532nm-191216-Si_200mu.txt", directory=ramandir)
    A.plot()

    A = scp.read_labspec("serie190214-1.txt", directory=ramandir)
    A.plot(colorbar=True)
    A.plot_map(colorbar=True)

    A = scp.read_labspec("SMC1-Initial_RT.txt", directory=ramandir)
    _ = A.plot()




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_001.png
         :alt: plot read raman from labspec
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_002.png
         :alt: plot read raman from labspec
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_002.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_003.png
         :alt: plot read raman from labspec
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_003.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_004.png
         :alt: plot read raman from labspec
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_005.png
         :alt: plot read raman from labspec
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_005.png
         :class: sphx-glr-multi-img





.. GENERATED FROM PYTHON SOURCE LINES 39-40

Open a dialog - note the presence of the keyword directory

.. GENERATED FROM PYTHON SOURCE LINES 40-42

.. code-block:: default

    B = scp.read_labspec(directory=ramandir)








.. GENERATED FROM PYTHON SOURCE LINES 43-44

this pack all spectra of the subdir directory (without dialog - look at the difference above)

.. GENERATED FROM PYTHON SOURCE LINES 44-47

.. code-block:: default

    B = scp.read_labspec(ramandir / "subdir")
    _ = B.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_006.png
   :alt: plot read raman from labspec
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_raman_from_labspec_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 48-50

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 50-52

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  3.465 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_raman_from_labspec.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_raman_from_labspec.py <plot_read_raman_from_labspec.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_raman_from_labspec.ipynb <plot_read_raman_from_labspec.ipynb>`
